--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,16 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	implementation 'com.h2database:h2'//테스트 용도입니다. 추후 mariadb로 전환 예정
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'//테스트용도 입니다. 추후 mariadb로 전환 예정
+
+	// querydsl 이놈
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	//runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 }
 
 tasks.named('test') {
