--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=sa
 spring.jpa.show-sql=true
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/test # 로컬DB 사용
-#spring.datasource.driver-class-name=org.h2.Driver
-
-## 인메모리나 로컬중에서 편하신걸로 사용해주세요. 변경시 둘중 하나는 주석처리 필수!!!!!
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
